# rag-chatbot-app

./: .gitignore  README.md  pyproject.toml  rag_app.py  rag_cli.py  requirements.txt
example/: laws_of_the_game-2024-25.json  laws_of_the_game-2024-25.md  test.json
shared/: __init__.py  db.py  genai.py  logging_helper.py  models.py  parse_pdf.py
shared/genai/: genai_client.py  prompts.py
shared/pdf_loader/: abbreviations.py  chunker.py
shared/vector_store/: db_client.py
tests/: test_rag.py
